[package]
name = "hfs"
authors = ["Violeta Hernández Palacios <vi.hdz.p@gmail.com>"]
categories = ["algorithms", "mathematics"]
description = "Hereditarily finite sets."
edition = "2021"
keywords = ["math", "set", "theory", "zfc"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/vihdzp/hfs"
version = "0.1.1"

[dependencies]
bitvec = "1.0"
derive_more = "0.99"
smallvec = "1.13"

[dev-dependencies]
concat-idents = "1.1"
